--- a/verification/cbmc/proofs/aws_cryptosdk_md_init/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_md_init/Makefile
@@ -12,11 +12,15 @@
 # limitations under the License.
 
 ###########
-# if Makefile.local exists, use it. This provides a way to override the defaults 
+# if Makefile.local exists, use it. This provides a way to override the defaults
 sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 
+
+# We abstract these functions as manual inspection shows there is no pkey associated with the MD_ctx.
+PROOF_SOURCES += $(PROOF_STUB)/EVP_MD_CTX_free_no_pkey_stub.c
+PROOF_SOURCES += $(PROOF_STUB)/evp_md_ctx_is_valid_no_pkey_stub.c
 
 # Adds check for memory leaks for this proof
 # Turning this flag on globally would require all proofs to carefully release objects, which they don't do.
@@ -27,17 +31,13 @@ HARNESS_ENTRY = aws_cryptosdk_md_init_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
 PROOF_SOURCES += $(HARNESS_FILE)
+
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
 PROOF_SOURCES += $(COMMON_PROOF_STUB)/error.c
 PROOF_SOURCES += $(PROOF_SOURCE)/cbmc_invariants.c
-PROOF_SOURCES += $(PROOF_SOURCE)/openssl/bn_override.c
-PROOF_SOURCES += $(PROOF_SOURCE)/openssl/ec_override.c
-PROOF_SOURCES += $(PROOF_SOURCE)/openssl/evp_override.c
-
-# We abstract these functions as manual inspection shows there is no pkey associated with the MD_ctx.
-PROOF_SOURCES += $(PROOF_STUB)/EVP_MD_CTX_free_no_pkey_stub.c
-PROOF_SOURCES += $(PROOF_STUB)/evp_md_ctx_is_valid_no_pkey_stub.c
-
+PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/bn_override.c
+PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/ec_override.c
+PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/evp_override.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
 PROJECT_SOURCES += $(SRCDIR)/source/cipher_openssl.c
 
