--- a/verification/cbmc/proofs/aws_cryptosdk_sig_sign_start_keygen/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_sig_sign_start_keygen/Makefile
@@ -19,28 +19,31 @@ include ../Makefile.local_default
 
 UNWINDSET += strcmp.0:11 # computed according to MAX_PUBKEY_SIZE and the implementation of aws_base64_encode
 
-ABSTRACTIONS += $(SRCDIR)/helper-stubs/aws_base64_encode.c
+PROOF_SOURCES += $(PROOF_STUB)/aws_base64_encode.c
 
-ENTRY = aws_cryptosdk_sig_sign_start_keygen_harness
+HARNESS_ENTRY = aws_cryptosdk_sig_sign_start_keygen_harness
+HARNESS_FILE = $(HARNESS_ENTRY).c
 
-DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/make_common_data_structures.goto
-DEPENDENCIES +=	$(SRCDIR)/c-common-helper-src/proof_allocators.goto
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.goto
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/byte_buf.goto
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/common.goto
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/encoding.goto
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/error.goto
-DEPENDENCIES +=	$(SRCDIR)/c-common-src/string.goto
-DEPENDENCIES +=	$(SRCDIR)/c-enc-sdk-src/cipher.goto
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/cipher_openssl.goto
-DEPENDENCIES += $(SRCDIR)/helper-src/cbmc_invariants.goto
-DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.goto
-DEPENDENCIES += $(SRCDIR)/helper-src/openssl/bn_override.goto
-DEPENDENCIES += $(SRCDIR)/helper-src/openssl/ec_override.goto
-DEPENDENCIES += $(SRCDIR)/helper-src/openssl/evp_override.goto
-DEPENDENCIES += $(SRCDIR)/helper-src/openssl/objects_override.goto
+PROOF_SOURCES += $(HARNESS_FILE)
 
-REMOVE_FUNCTION_BODY += --remove-function-body aws_base64_encode
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/utils.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/encoding.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/error.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/string.c
+PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
+PROJECT_SOURCES += $(SRCDIR)/source/cipher_openssl.c
+PROOF_SOURCES += $(PROOF_SOURCE)/cbmc_invariants.c
+PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
+PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/bn_override.c
+PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/ec_override.c
+PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/evp_override.c
+PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/objects_override.c
+
+REMOVE_FUNCTION_BODY += aws_base64_encode
 
 ###########
 
