--- a/verification/cbmc/proofs/aws_cryptosdk_edk_init_clone/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_edk_init_clone/Makefile
@@ -21,7 +21,7 @@ include ../Makefile.local_default
 # Local vars
 
 #########
-ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/error.c
+PROOF_SOURCES += $(COMMON_PROOF_STUB)/error.c
 
 AWS_DEEP_CHECKS = 1
 
@@ -29,20 +29,23 @@ CBMCFLAGS +=
 
 DEFINES +=
 
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/common.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/math.c
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/edk.c
-DEPENDENCIES += $(SRCDIR)/helper-src/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/utils.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/math.c
+PROJECT_SOURCES += $(SRCDIR)/source/edk.c
+PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
-ENTRY = aws_cryptosdk_edk_init_clone_harness
+HARNESS_ENTRY = aws_cryptosdk_edk_init_clone_harness
+HARNESS_FILE = $(HARNESS_ENTRY).c
 
-REMOVE_FUNCTION_BODIES += --remove-function-body nondet_compare
+PROOF_SOURCES += $(HARNESS_FILE)
 
-UNWINDSET += 
+REMOVE_FUNCTION_BODY += nondet_compare
+
+UNWINDSET +=
 
 ###########
 include ../Makefile.common
