--- a/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_deserialize/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_deserialize/Makefile
@@ -11,7 +11,6 @@
 # implied. See the License for the specific language governing permissions and
 # limitations under the License.
 
-
 #########
 # if Makefile.local exists, use it. This provides a way to override the defaults
 sinclude ../Makefile.local
@@ -25,31 +24,34 @@ MAX_NUM_ELEMS = 2
 
 #########
 #if we don't include the hash_table.c, we don't need to remove their function bodies
-ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/aws_byte_cursor_read_be16_override.c
-ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/aws_hash_table_no_slots_override.c
-ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/aws_string_destroy_override.c
-ABSTRACTIONS += $(SRCDIR)/c-common-helper-stubs/aws_string_new_from_array_override.c
+PROOF_SOURCES += $(COMMON_PROOF_STUB)/aws_byte_cursor_read_be16_override.c
+PROOF_SOURCES += $(COMMON_PROOF_STUB)/aws_hash_table_no_slots_override.c
+PROOF_SOURCES += $(COMMON_PROOF_STUB)/aws_string_destroy_override.c
+PROOF_SOURCES += $(COMMON_PROOF_STUB)/aws_string_new_from_array_override.c
 
 CBMCFLAGS +=
 
 DEFINES += -DAWS_BYTE_CURSOR_READ_BE16_GENERATOR=aws_byte_cursor_read_be16_generator_for_enc_ctx_deserialize
 DEFINES += -DMAX_NUM_ELEMS=$(MAX_NUM_ELEMS)
 
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/make_common_data_structures.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/proof_allocators.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-src/utils.c
-DEPENDENCIES += $(SRCDIR)/c-common-helper-stubs/error.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/byte_buf.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/common.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/hash_table.c
-DEPENDENCIES += $(SRCDIR)/c-common-src/math.c
-DEPENDENCIES += $(SRCDIR)/c-enc-sdk-src/enc_ctx.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
+PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/utils.c
+PROOF_SOURCES += $(COMMON_PROOF_STUB)/error.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/hash_table.c
+PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/math.c
+PROJECT_SOURCES += $(SRCDIR)/source/enc_ctx.c
 
-ENTRY = aws_cryptosdk_enc_ctx_deserialize_harness
+HARNESS_ENTRY = aws_cryptosdk_enc_ctx_deserialize_harness
+HARNESS_FILE = $(HARNESS_ENTRY).c
 
-REMOVE_FUNCTION_BODIES += --remove-function-body aws_byte_cursor_read_be16
-REMOVE_FUNCTION_BODIES += --remove-function-body aws_string_destroy
-REMOVE_FUNCTION_BODIES += --remove-function-body aws_string_new_from_array
+PROOF_SOURCES += $(HARNESS_FILE)
+
+REMOVE_FUNCTION_BODY += aws_byte_cursor_read_be16
+REMOVE_FUNCTION_BODY += aws_string_destroy
+REMOVE_FUNCTION_BODY += aws_string_new_from_array
 
 UNWINDSET += aws_cryptosdk_enc_ctx_deserialize.0:$(shell echo $$(($(MAX_NUM_ELEMS) + 1)))
 
