--- a/verification/cbmc/proofs/aws_cryptosdk_dec_materials_new/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_dec_materials_new/Makefile
@@ -31,7 +31,8 @@ PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/ec_override.c
 PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/bn_override.c
 PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/evp_override.c
 
-AWS_DEEP_CHECKS = 1
+DEFINES += -DKEYRING_TRACE_SIZE=$(KEYRING_TRACE_SIZE)
+DEFINES += -DAWS_DEEP_CHECKS=1
 
 CBMCFLAGS +=
 
