--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_add_record_c_str/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_add_record_c_str/Makefile
@@ -16,8 +16,6 @@ include ../Makefile.aws_array_list
 include ../Makefile.aws_byte_buf
 include ../Makefile.string
 
-CBMC_UNWINDSET += --unwindset aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((2 + $(MAX_ITEM_SIZE)))),ensure_trace_has_allocated_records.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),aws_string_new_from_array.0:$(shell echo $$((1 + $(MAX_STRING_LEN)))),strlen.0:$(shell echo $$((1 + $(MAX_STRING_LEN))))
-
 CBMCFLAGS +=
 
 HARNESS_ENTRY = aws_cryptosdk_keyring_trace_add_record_c_str_harness
@@ -38,6 +36,11 @@ PROJECT_SOURCES += $(SRCDIR)/source/keyring_trace.c
 PROJECT_SOURCES += $(SRCDIR)/source/utils.c
 PROOF_SOURCES += $(COMMON_PROOF_STUB)/memcpy_override_havoc.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
+
+UNWINDSET += aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((2 + $(MAX_ITEM_SIZE))))
+UNWINDSET += ensure_trace_has_allocated_records.0:$(call addone,$(MAX_ITEM_SIZE))
+UNWINDSET += aws_string_new_from_array.0:$(call addone,$(MAX_STRING_LEN))
+UNWINDSET += strlen.0:$(call addone,$(MAX_STRING_LEN))
 
 ###########
 
