--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_add_record_buf/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_add_record_buf/Makefile
@@ -16,8 +16,6 @@ include ../Makefile.string
 include ../Makefile.aws_array_list
 include ../Makefile.aws_byte_buf
 
-CBMC_UNWINDSET += --unwindset aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((2 + $(MAX_ITEM_SIZE)))),ensure_trace_has_allocated_records.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),aws_string_new_from_array.0:$(shell echo $$((1 + $(MAX_STRING_LEN))))
-
 CBMCFLAGS +=
 
 HARNESS_ENTRY = aws_cryptosdk_keyring_trace_add_record_buf_harness
@@ -39,6 +37,9 @@ PROJECT_SOURCES += $(SRCDIR)/source/keyring_trace.c
 PROJECT_SOURCES += $(SRCDIR)/source/utils.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
+UNWINDSET += aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((2 + $(MAX_ITEM_SIZE))))
+UNWINDSET += ensure_trace_has_allocated_records.0:$(call addone,$(MAX_ITEM_SIZE))
+UNWINDSET += aws_string_new_from_array.0:$(call addone,$(MAX_STRING_LEN))
 ###########
 
 include ../Makefile.common
