--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_clean_up/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_clean_up/Makefile
@@ -19,8 +19,6 @@ include ../Makefile.local_default
 include ../Makefile.string
 include ../Makefile.aws_array_list
 
-CBMC_UNWINDSET += --unwindset aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),ensure_trace_has_allocated_records.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE)))),aws_cryptosdk_keyring_trace_clear.0:$(shell echo $$((1 + $(MAX_ITEM_SIZE))))
-
 CBMCFLAGS +=
 
 HARNESS_ENTRY = aws_cryptosdk_keyring_trace_clean_up_harness
@@ -38,6 +36,10 @@ PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/utils.c
+
+UNWINDSET += aws_cryptosdk_keyring_trace_is_valid.0:$(call addone,$(MAX_ITEM_SIZE))
+UNWINDSET += ensure_trace_has_allocated_records.0:$(call addone,$(MAX_ITEM_SIZE))
+UNWINDSET += aws_cryptosdk_keyring_trace_clear.0:$(call addone,$(MAX_ITEM_SIZE))
 
 ###########
 
