Proof uninlines and stubs added to project sources

--- a/verification/cbmc/proofs/aws_cryptosdk_cmm_decrypt_materials/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_cmm_decrypt_materials/Makefile
@@ -53,7 +53,7 @@ PROJECT_SOURCES += $(SRCDIR)/source/cipher_openssl.c
 PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
 PROOF_SOURCES += $(PROOF_SOURCE)/cbmc_invariants.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
-PROOF_SOURCES += $(COMMON_PROOF_UNINLINE)/atomics.c
+PROJECT_SOURCES += $(COMMON_PROOF_UNINLINE)/atomics.c
 
 HARNESS_ENTRY = aws_cryptosdk_cmm_decrypt_materials_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
