--- a/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_clear/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_clear/Makefile
@@ -39,13 +39,19 @@ PROOF_SOURCES += $(COMMON_PROOF_STUB)/aws_string_destroy_override.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/utils.c
-PROOF_SOURCES += $(COMMON_PROOF_STUB)/error.c
 PROOF_SOURCES += $(COMMON_PROOF_STUB)/memset_override_0.c
+PROJECT_SOURCES += $(COMMON_PROOF_UNINLINE)/error.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/hash_table.c
 PROJECT_SOURCES += $(SRCDIR)/source/enc_ctx.c
 
 REMOVE_FUNCTION_BODY += aws_string_destroy
+REMOVE_FUNCTION_BODY += hashlittle2
+REMOVE_FUNCTION_BODY += aws_string_bytes
+REMOVE_FUNCTION_BODY += aws_string_is_valid
+REMOVE_FUNCTION_BODY += aws_hash_callback_string_destroy
+REMOVE_FUNCTION_BODY += aws_hash_string
+REMOVE_FUNCTION_BODY += aws_raise_error_private
 
 ###########
 
