--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_copy_all/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_copy_all/Makefile
@@ -32,14 +32,15 @@ DEFINES += -DAWS_NO_STATIC_IMPL
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/utils.c
-PROOF_SOURCES += $(COMMON_PROOF_UNINLINE)/array_list.c
-PROOF_SOURCES += $(COMMON_PROOF_UNINLINE)/error.c
-PROOF_SOURCES += $(COMMON_PROOF_UNINLINE)/math.c
+PROJECT_SOURCES += $(COMMON_PROOF_UNINLINE)/array_list.c
+PROJECT_SOURCES += $(COMMON_PROOF_UNINLINE)/error.c
+PROJECT_SOURCES += $(COMMON_PROOF_UNINLINE)/math.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/array_list.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/byte_buf.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/common.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/math.c
 PROJECT_SOURCES += $(SRCDIR)/source/list_utils.c
+# PROJECT_SOURCES += $(SRCDIR)/source/keyring_trace.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
 HARNESS_ENTRY = aws_cryptosdk_keyring_trace_copy_all_harness
