--- a/verification/cbmc/proofs/aws_cryptosdk_alg_props/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_alg_props/Makefile
@@ -21,10 +21,11 @@ UNWINDSET +=
 
 CBMCFLAGS +=
 
-HARNESS_ENTRY = aws_cryptosdk_alg_props_harness
+PROOF_UID = aws_cryptosdk_alg_props
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
 PROJECT_SOURCES += $(SRCDIR)/source/cipher_openssl.c
