--- a/verification/cbmc/proofs/aws_cryptosdk_edk_list_clean_up/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_edk_list_clean_up/Makefile
@@ -47,10 +47,11 @@ PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/math.c
 PROJECT_SOURCES += $(SRCDIR)/source/edk.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
-HARNESS_ENTRY = aws_cryptosdk_edk_list_clean_up_harness
+PROOF_UID = aws_cryptosdk_edk_list_clean_up
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 REMOVE_FUNCTION_BODY += aws_array_list_get_at_ptr
 REMOVE_FUNCTION_BODY += nondet_compare
