--- a/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_clone/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_enc_ctx_clone/Makefile
@@ -46,10 +46,11 @@ PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/math.c
 PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/string.c
 PROJECT_SOURCES += $(SRCDIR)/source/enc_ctx.c
 
-HARNESS_ENTRY = aws_cryptosdk_enc_ctx_clone_harness
+PROOF_UID = aws_cryptosdk_enc_ctx_clone
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 REMOVE_FUNCTION_BODY += aws_string_destroy
 REMOVE_FUNCTION_BODY += aws_string_new_from_array
