--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_add_record_c_str/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_add_record_c_str/Makefile
@@ -18,10 +18,11 @@ include ../Makefile.string
 
 CBMCFLAGS +=
 
-HARNESS_ENTRY = aws_cryptosdk_keyring_trace_add_record_c_str_harness
+PROOF_UID = aws_cryptosdk_keyring_trace_add_record_c_str
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
