--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_eq/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_eq/Makefile
@@ -19,10 +19,11 @@ include ../Makefile.local_default
 include ../Makefile.string
 include ../Makefile.aws_array_list
 
-HARNESS_ENTRY = aws_cryptosdk_keyring_trace_eq_harness
+PROOF_UID = aws_cryptosdk_keyring_trace_eq
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
