--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_init/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_init/Makefile
@@ -28,10 +28,11 @@ PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
 PROJECT_SOURCES += $(SRCDIR)/source/keyring_trace.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
-HARNESS_ENTRY = aws_cryptosdk_keyring_trace_init_harness
+PROOF_UID = aws_cryptosdk_keyring_trace_init
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 UNWINDSET +=
 
