--- a/verification/cbmc/proofs/aws_cryptosdk_dec_materials_new/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_dec_materials_new/Makefile
@@ -50,10 +50,11 @@ PROJECT_SOURCES += $(SRCDIR)/source/cipher.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 PROJECT_SOURCES += $(COMMON_PROOF_UNINLINE)/atomics.c
 
-HARNESS_ENTRY = aws_cryptosdk_dec_materials_new_harness
+PROOF_UID = aws_cryptosdk_dec_materials_new
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 UNWINDSET += aws_cryptosdk_keyring_trace_is_valid.0:$(shell echo $$(($(KEYRING_TRACE_SIZE) + 1)))
 ###########
