--- a/verification/cbmc/proofs/aws_cryptosdk_deserialize_frame/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_deserialize_frame/Makefile
@@ -17,10 +17,11 @@ sinclude ../Makefile.local
 #otherwise, use the default values
 include ../Makefile.local_default
 
-HARNESS_ENTRY = aws_cryptosdk_deserialize_frame_harness
+PROOF_UID = aws_cryptosdk_deserialize_frame
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
