--- a/verification/cbmc/proofs/aws_cryptosdk_edk_list_copy_all/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_edk_list_copy_all/Makefile
@@ -42,10 +42,11 @@ PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/math.c
 PROJECT_SOURCES += $(SRCDIR)/source/list_utils.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
-HARNESS_ENTRY = aws_cryptosdk_edk_list_copy_all_harness
+PROOF_UID = aws_cryptosdk_edk_list_copy_all
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 # The original aws_array_list_is_valid() has a 64 bit multiplication.
 # CBMC performance dies trying to do all those multiplications.
