--- a/verification/cbmc/proofs/aws_cryptosdk_encrypt_body/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_encrypt_body/Makefile
@@ -27,10 +27,11 @@ UNWINDSET += strlen.0:37
 
 CBMCFLAGS +=
 
-HARNESS_ENTRY = aws_cryptosdk_encrypt_body_harness
+PROOF_UID = aws_cryptosdk_encrypt_body
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
