--- a/verification/cbmc/proofs/aws_cryptosdk_genrandom/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_genrandom/Makefile
@@ -31,10 +31,11 @@ PROOF_SOURCES += $(PROOF_SOURCE)/cbmc_invariants.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 PROJECT_SOURCES += $(PROOF_SOURCE)/openssl/rand_override.c
 
-HARNESS_ENTRY = aws_cryptosdk_genrandom_harness
+PROOF_UID = aws_cryptosdk_genrandom
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 UNWINDSET +=
 
