--- a/verification/cbmc/proofs/aws_cryptosdk_hkdf/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_hkdf/Makefile
@@ -22,10 +22,11 @@ UNWINDSET +=
 
 CBMCFLAGS +=
 
-HARNESS_ENTRY = aws_cryptosdk_hkdf_harness
+PROOF_UID = aws_cryptosdk_hkdf
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 PROOF_SOURCES += $(COMMON_PROOF_STUB)/memcpy_override_havoc.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
