--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_release/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_release/Makefile
@@ -38,10 +38,11 @@ PROJECT_SOURCES += $(CBMC_ROOT)/aws-c-common/source/error.c
 PROJECT_SOURCES += $(SRCDIR)/source/materials.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 
-HARNESS_ENTRY = aws_cryptosdk_keyring_release_harness
+PROOF_UID = aws_cryptosdk_keyring_release
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 REMOVE_FUNCTION_BODY += hash_proof_destroy_noop
 REMOVE_FUNCTION_BODY += aws_raise_error_private
