--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_retain/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_retain/Makefile
@@ -39,10 +39,11 @@ PROJECT_SOURCES += $(SRCDIR)/source/materials.c
 PROOF_SOURCES += $(PROOF_SOURCE)/make_common_data_structures.c
 PROJECT_SOURCES += $(COMMON_PROOF_UNINLINE)/atomics.c
 
-HARNESS_ENTRY = aws_cryptosdk_keyring_retain_harness
+PROOF_UID = aws_cryptosdk_keyring_retain
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 UNWINDSET +=
 
