--- a/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_add_record/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_keyring_trace_add_record/Makefile
@@ -15,10 +15,11 @@
 include ../Makefile.string
 include ../Makefile.aws_array_list
 
-HARNESS_ENTRY = aws_cryptosdk_keyring_trace_add_record_harness
+PROOF_UID = aws_cryptosdk_keyring_trace_add_record
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
