--- a/verification/cbmc/proofs/aws_cryptosdk_sig_get_privkey/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_sig_get_privkey/Makefile
@@ -22,10 +22,11 @@ UNWINDSET +=
 
 CBMCFLAGS +=
 
-HARNESS_ENTRY = aws_cryptosdk_sig_get_privkey_harness
+PROOF_UID = aws_cryptosdk_sig_get_privkey
+HARNESS_ENTRY = $(PROOF_UID)_harness
 HARNESS_FILE = $(HARNESS_ENTRY).c
 
-PROOF_SOURCES += $(HARNESS_FILE)
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/proof_allocators.c
 PROOF_SOURCES += $(COMMON_PROOF_SOURCE)/make_common_data_structures.c
