Removes CBMC proof for aws_cryptosdk_derive_key. Removes fun body for sha512 in aws_cryptsodk_encrypt_body

--- a/verification/cbmc/proofs/aws_cryptosdk_encrypt_body/Makefile
+++ b/verification/cbmc/proofs/aws_cryptosdk_encrypt_body/Makefile
@@ -47,6 +47,7 @@ REMOVE_FUNCTION_BODY += aws_raise_error_private
 REMOVE_FUNCTION_BODY += EVP_DecryptUpdate
 REMOVE_FUNCTION_BODY += EVP_sha256
 REMOVE_FUNCTION_BODY += EVP_sha384
+REMOVE_FUNCTION_BODY += EVP_sha512
 REMOVE_FUNCTION_BODY += nondet_compare
 
 include ../Makefile.common
